@@ -2,6 +2,8 @@
 Changes in version 0.7.4p1
 - Fixed bug where default JEventProcessor::evnt was calling int version of
   itself leading to hangs.
+- Fixed problem in SBMS AddROOT where it assumed (DY)LD_LIBRARY_PATH was
+  set. This caused crashes on OS X El Capitan
 
 Changes in version 0.7.4
 - Fixed bug in location osrelease.pl was being run
